# seldom-atx

./: README.en.md  README.md  pyproject.toml  requirements.txt  setup.py
demo/: README.md  confrun.py  run.py
demo/database/: seldom_atx.db
demo/test_dir/: test_demo_Android.py
demo/test_dir/app_case/: test_demo_Android.py  test_demo_iOS.py  test_demo_u2_wda.py
seldom/: __init__.py  case.py  cli.py  u2driver.py  wdadriver.py
seldom/running/: config.py  runner.py
seldom/testdata/: conversion.py  parameterization.py
seldom/utils/: perf.py
seldom_atx/: __init__.py  case.py  cli.py  u2driver.py  wdadriver.py
seldom_atx/db_operation/: mssql_db.py  mysql_db.py  sqlite_db.py
seldom_atx/har2case/: core.py  utils.py
seldom_atx/logging/: exceptions.py  log.py
seldom_atx/running/: config.py  loader_extend.py  runner.py
seldom_atx/testdata/: conversion.py  parameterization.py  random_func.py
seldom_atx/utils/: __init__.py  cache.py  diff.py  genson.py  jsonpath.py  perf.py  send_extend.py  sqlite.py  thread_lab.py
seldom_atx/utils/app/: _common.py  _duration.py  _effect.py  _performance.py  case_decorator.py
seldom_atx/utils/solox/: adb.py  android_fps.py  apm.py  common.py
